<resources>
    <string name="app_name">Chuut The Baby</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="header_text">Choose your activity</string>

    <string name="menu_play">Play</string>
    <string name="menu_rec">Record</string>
    <string name="menu_animation">Night light mode</string>
    <string name="menu_auto">Auto mode config</string>
    <string name="menu_babyphone">Babyphone mode</string>
    <string name="menu_video">Video mode</string>
    <string name="menu_logIn">Log In</string>
    <string name="menu_about">About</string>
    <string name="menu_register">Register</string>

    <string name="title_main">Launch a random lullaby :</string>
    <string name="title_rec">Record a lullaby :</string>

    <string name="button_stop">Stop, Im not sleepy</string>
    <string name="hold_on"> Hold On ! </string>
    <string name="spinner_title_play">Select a music</string>

    <string name="stop_record">Stop Record</string>
    <string name="start_play">Start Play</string>
    <string name="start_record">Start Record</string>

    <string name="register_plzRegister">Please Register :</string>
    <string name="login_plzLogin">Please Login :</string>
    <string name="login_Login">Login</string>
    <string name="login_Pwd">Password</string>
    <string name="register_email">e-mail</string>
    <string name="register_firstName">Parent first name</string>
    <string name="register_lastName">Parent last name</string>
    <string name="register_firstNameChild">Child first name</string>
    <string name="register_birthdayChild">Child birthday</string>
    <string name="register_sexChild">Boy or Girl?</string>
    <string name="register_confirm">Confirm :</string>
    <string name="radio_male">Boy</string>
    <string name="radio_female">Girl</string>
    <string name="register_registerToDatabase">Register me !</string>


    <string name="sleepTimer">Sleep Timer</string>
    <string name="disabled">Disabled</string>
    <string name="time_1minute">1 Minute</string>
    <string name="time_5minute">5 Minutes</string>
    <string name="time_10minute">10 Minutes</string>
    <string name="time_30minute">30 Minutes</string>
    <string name="time_1hour">1 Hour</string>
    <string name="time_2hour">2 Hours</string>
    <string name="time_4hour">4 Hours</string>
    <string name="time_8hour">8 Hours</string>




    <string name="content_about">
        Licenced under Creative Commons (CC BY 3.0 FR)

        You are free to:

        Share — copy and redistribute the material in any medium or format
        Adapt — remix, transform, and build upon the material
        for any purpose, even commercially.
        The licensor cannot revoke these freedoms as long as you follow the license terms.

        Attribution — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.

        Authors :
        - Clothilde Linne.
        - Anh-Quang Dam.
        - Raphaël Bouqueau.
        - Pierre Florquin.
    </string>

</resources>
