<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/night_reduced"
    tools:context="com.projetastonlille.fr.shuutthebaby.Menu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:id="@+id/textView" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_play"
        android:id="@+id/playButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_rec"
        android:id="@+id/recButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_alignTop="@+id/playButton"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_animation"
        android:id="@+id/nightLightButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_below="@+id/playButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_auto"
        android:id="@+id/autoModeButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_alignTop="@+id/nightLightButton"
        android:layout_alignEnd="@+id/recButton" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_babyphone"
        android:id="@+id/babyPhoneButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_video"
        android:id="@+id/videoButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_alignTop="@+id/babyPhoneButton"
        android:layout_alignEnd="@+id/autoModeButton" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_logIn"
        android:id="@+id/logInButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_below="@+id/babyPhoneButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/videoButton" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_about"
        android:id="@+id/aboutButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/logInButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/menu_register"
        android:id="@+id/registerButton"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/layout_corner"
        android:textColor="@color/colorTextYellow"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/aboutButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
